2003-05-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* load-save.cc (save_ascii_data): If saving a range with
	non-integer base, limit, or increment, save as matrix instead.
	(get_save_type): Avoid unsigned types.

2003-04-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octave.cc (initialize_pathsearch): Don't save old and set new
	value of TEXMFDBS.

	* toplev.cc (restore_texmfdbs_envvar): Delete function.
	(Fsystem): Don't set and reset TEXMFDBS.

	* toplev.h, toplev.cc (octave_original_texmfdbs): Delete variable.

2003-04-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* DLD-FUNCTIONS/getpwent.cc (Fgetpwnam): Delete unnecessary
	c_str() method.

2003-04-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* file-io.cc: Include <memory> for auto_ptr.

2003-04-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* toplev.cc (octave_config_info): Delete LIBKPATHSEA from struct.
	* oct-conf.h.in: Don't substitute LIBKPATHSEA.

	* octave.cc (octave_main): Don't call dir_path::set_program_name.

2003-04-17  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-file.h (octave_file::empty_clone): Create an octave_scalar
	object, not an octave_file object.

2003-04-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* load-save.cc (hdf5_read_next_data): Extract list before
	assigning to map element.
	(add_hdf5_data): Prefix faked names with '_' so they are valid
	identifiers.

2003-03-24  Mats Jansson  <mats.e.jansson@home.se>

	* syscalls.cc (Fkill): Fixed docstring typo.

2003-03-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* ov-cell.h (octave_cell::is_matrix_type): New function.

2003-03-09  Duncan Temple Lang <duncan@research.bell-labs.com>

	* octave.cc (octave_main): New arg, embedded.
	* octave.h: Fix decl.
	* main.c: Pass 0 for embedded here.

2003-03-03  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* version.h (OCTAVE_VERSION): Now 2.1.46.

	* oct-conf.h.in: Undo previous change.

	* load-save.cc (read_mat5_binary_element): Handle structure arrays.
	(save_mat5_binary_element): Likewise.
